Added CSS Variables
Created CSS variables for the catppuccin colors I've been using. Updated
the header and footer on the other two pages.

--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,19 @@
     <body>
       <h1>My website!</h1>
       <p>I attempted this while being bored.</p>
+      <ul>
+        <li>
+          <a href="https://en.pronouns.page/u/itsnotahlo">
+              <img alt="Static Badge" src="https://img.shields.io/badge/She%2FHer-Pronouns?style=flat&logo=githubsponsors&logoSize=auto&label=Pronouns.Page&color=cc3399">
+          </a>
+        </li>
+        <li>
+          <img src="https://img.shields.io/badge/Enjoyer-Hyprland?style=flat&logo=hyprland&logoSize=auto&label=Hyprland&color=cc3399"/>
+        </li>
+      <li>
+          <img src="https://img.shields.io/badge/Lover-NixOS?style=flat&logo=nixos&logoSize=auto&label=NixOS&labelColor=7eb8e2&color=959896"/>
+      </li>
+      </ul>
     </body>
   </header>
   <nav>
@@ -32,9 +45,15 @@
 
   <footer>
     <ul>
-      <li>Made by Ahlo!</li>
-      <li>This website was made as a side project to get me back into HTML</li>
-      <li>Colorscheme is <a href="https://github.com/catppuccin/catppuccin/tree/main?tab=readme-ov-file">Catppuccin</a></li>
+      <li class="left">Made by Ahlo!</li>
+      <li class="left">This website was made as a side project to get me back into HTML</li>
+      <li class="left">Colorscheme is <a href="https://github.com/catppuccin/catppuccin/tree/main?tab=readme-ov-file">Catppuccin</a></li>
+      <li class="right">
+        <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/t/itsnotahlo/website">
+      </li>
+      <li class="right">
+        <img alt="Static Badge" src="https://img.shields.io/badge/ItsNotAhlo-Github?logo=github&label=GitHub&color=f5c2e7">
+      </li>
     </ul>
   </footer>
 </html>
