--- a/about.html
+++ b/about.html
@@ -66,6 +66,20 @@
       <li>Made by Ahlo!</li>
       <li>This website was made as a side project to get me back into HTML</li>
       <li>Colorscheme is <a href="https://github.com/catppuccin/catppuccin/tree/main?tab=readme-ov-file">Catppuccin</a></li>
+      <!-- <li style="float:right"> -->
+      <!--   <a href="https://en.pronouns.page/u/itsnotahlo"> -->
+      <!--       <img alt="Static Badge" src="https://img.shields.io/badge/She%2FHer-Pronouns?style=flat&logo=githubsponsors&logoSize=auto&label=Pronouns.Page&color=cc3399"> -->
+      <!--   </a> -->
+      <!-- </li> -->
+      <!-- <li style="float:right"> -->
+      <!--   <img src="https://img.shields.io/badge/Enjoyer-Hyprland?style=flat&logo=hyprland&logoSize=auto&label=Hyprland&color=cc3399"/> -->
+      <!-- </li> -->
+      <li style="float:right">
+        <img alt="GitHub commit activity" src="https://img.shields.io/github/commit-activity/t/itsnotahlo/website">
+      </li>
+      <li style="float:right">
+        <img alt="Static Badge" src="https://img.shields.io/badge/ItsNotAhlo-Github?logo=github&label=GitHub&color=f5c2e7">
+      </li>
     </ul>
   </footer>
 </html>
